2005-12-10  Christopher Faylor  <cgf@timesys.com>

	* malloc.cc: Update to version 2.8.3.
	* cygmalloc.h (MSPACE): Remove unneeded definition.

2005-12-08  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_raw.cc (fhandler_dev_raw::ioctl): Only allow 0, 1 or a
	multiple of 512 as new buffersize.

2005-12-08  Pekka Pessi <ppessi@gmail.com>
	    Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::recvfrom): Mask flags with
	MSG_WINMASK for Windows socket calls.
	(fhandler_socket::recvmsg): Ditto.
	(fhandler_socket::sendmsg): Ditto.

2005-12-07  Christopher Faylor  <cgf@timesys.com>

	* hires.h (hires_ms::initime_ms): Delete.
	(hires_ms::initime_us): Just define as LONGLONG.
	(hires_ms::uptime): New function.
	* select.cc (select_stuff::wait): Use gtod for timing to attempt to
	avoid windows 32 bit wraparound.
	* times.cc (systime): New function.
	(times): Replace GetTickCount with gtod.uptime.
	(hires_us::prime): Use systime() to calculate system time rather than
	calling GetSystemTimeAsFileTime directly.
	(hires_ms::prime): Ditto.  Eliminate initime_ms.
	(hires_ms::usecs): Try harder to detect wraparound.

	* fhandler_proc.cc (format_proc_partitions): Set drive_size to zero to
	avoid a compiler warning.

2005-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_proc.cc (format_proc_partitions): Use modern IOCTLs
	to determine drive size as far as possible.

2005-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_raw.cc (fhandler_dev_raw::ioctl): Fix INVALID_PARAMETER
	condition.  Only copy devbuf to buf if buf is non-NULL.

2005-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_raw.cc (fhandler_dev_raw::ioctl): Fix setting devbuf
	when rd_parm is 0 or 1.

2005-12-07  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_floppy.cc (fhandler_dev_floppy::lseek): Fix test for
	valid file position at EOM.

2005-12-07  Christopher Faylor  <cgf@timesys.com>
