@@ -1,5 +1,9 @@
 2005-12-10  Christopher Faylor  <cgf@timesys.com>
 
+	* dirent.h: Change the rest of the d_ino's to __deprecated_d_ino.
+
+2005-12-10  Christopher Faylor  <cgf@timesys.com>
+
 	* malloc.cc: Update to version 2.8.3.
 	* cygmalloc.h (MSPACE): Remove unneeded definition.
 
@@ -129,6 +133,7 @@
 	obsolescence of d_ino.
 	(CYGWIN_VERSION_USER_API_VERSION_COMBINED): New convenience macro.
 	(CYGWIN_VERSION_CHECK_FOR_NEEDS_D_INO): New convenience macro.
+	* include/sys/dirent.h: Change d_ino field to __deprecated_d_ino.
 
 2005-12-05  Christopher Faylor  <cgf@timesys.com>
 
